--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: monospace;
+}
+
+h2 {
+  text-align: center;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hero {
+  background-color: black;
+  margin: 3vh 3vw;
+  background-image: url('https://assets.codepen.io/6060109/agency-hero-image.png');
+  height: 80vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav {
+  font-family: monospace;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav>ul {
+  font-size: 15px;
+  padding: 25px 20px 0 20px 
+}
+.hero-text {
+  font-family: monospace;
+  width: 100%;
+  height: 95%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 30px;
+}
+.services {
+  font-size: 20px;
+  color: #133588;
+  padding: 0 0 100px 0;
+}
+.services-text {
+  font-size: 45px;
+  color: #133588;
+  padding: 80px 0 0 0;
+}
+.services-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.pic-text {
+  margin: 0px 25px 5px 25px;
+  color: #806c6c
+}
+.service-image {
+  width: auto;
+  height: 20vw;
+  margin: 50px 25px 5px 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.email {
+  height: 60vh;
+  margin: 3vh 3vw;
+  padding: 0 30vw 0 30vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
+  text-align: center;
+  background-color: #133588;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.top {
+  font-size: 30px;
+  margin-top: 40px;
+  padding: 20px 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.middle {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+  padding-bottom: 10px;
+  font-size: 20px;
+  margin: 0 0 0 0;
+  color: rgba(255, 255, 255, 0.8)
+}
+.bottom {
+  background-color:white;
+  margin-left: 35%;
+  margin-right: 35%;
+  height: 5vh;
+  color: #806c6c;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+  font-size: 25px;
+  margin-top: 1vh;
+  margin-bottom: 7vh;
+  padding-top: 1vh;
 }
