--- a/src/App.css
+++ b/src/App.css
@@ -28,29 +28,29 @@ h2 {
   align-items: center;
 }
 .nav>ul {
-  font-size: 15px;
-  padding: 25px 20px 0 20px 
+  font-size: 1.2em;
+  padding: 1.8em 1.5em 0 1.5em; 
 }
 .hero-text {
   font-family: monospace;
-  width: 100%;
+  width: 95%;
   height: 95%;
   color: white;
   display: flex;
   justify-content: center;
   text-align: center;
   align-items: center;
-  font-size: 30px;
+  font-size: 2.5em;
 }
 .services {
-  font-size: 20px;
+  font-size: 1.8em;
   color: #133588;
-  padding: 0 0 100px 0;
+  padding: 0 0 5em 0;
 }
 .services-text {
-  font-size: 45px;
+  font-size: 2em;
   color: #133588;
-  padding: 80px 0 0 0;
+  padding: 2.2em 0 0 0;
 }
 .services-div {
   display: flex;
@@ -58,13 +58,14 @@ h2 {
   justify-content: center;
 }
 .pic-text {
-  margin: 0px 25px 5px 25px;
-  color: #806c6c
+  margin: 0px 1em .8em 1em;
+  color: #806c6c;
+  text-align: left;
 }
 .service-image {
   width: auto;
   height: 20vw;
-  margin: 50px 25px 5px 25px;
+  margin: 3em 1em .8em 1em;
 }
 
 .email {
@@ -80,14 +81,14 @@ h2 {
 }
 
 .top {
-  font-size: 30px;
-  margin-top: 40px;
-  padding: 20px 0;
+  font-size: 2em;
+  margin-top: 1.5em;
+  padding: 1.5em 0;
 }
 .middle {
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
-  padding-bottom: 10px;
-  font-size: 20px;
+  padding-bottom: .9em;
+  font-size: 1.3em;
   margin: 0 0 0 0;
   color: rgba(255, 255, 255, 0.8)
 }
@@ -100,8 +101,32 @@ h2 {
   text-align: center;
   vertical-align: middle;
   display: table-cell;
-  font-size: 25px;
+  font-size: 1.8em;
   margin-top: 1vh;
   margin-bottom: 7vh;
   padding-top: 1vh;
 }
+
+@media only screen and (max-width: 600px) {
+  .services {
+    padding: 0 5vw 0 5vw;
+  }
+  .services-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .service-image {
+    height: 80vw;
+  }
+  .email {
+    padding: 0 5vw 0 5vw;
+  }
+  .bottom {
+    margin-left: .5em;
+    margin-right: .5em;
+    padding-top: none;
+    padding-bottom: 1vh;
+  }
+}
+
